--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-chakra-ui",
+  "name": "camlemessurier",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -11,10 +11,11 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "framer-motion": "^4.0.3",
+    "framer-motion": "^4.1.17",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "license": "MIT"
 }
