--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "camlemessurier",
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.4.2",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
-    "framer-motion": "^4.1.17",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
-  },
-  "license": "MIT"
+	"name": "camlemessurier",
+	"version": "0.1.0",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next export",
+		"lint": "next lint",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@chakra-ui/icons": "^1.0.0",
+		"@chakra-ui/react": "^1.4.2",
+		"@emotion/react": "^11.0.0",
+		"@emotion/styled": "^11.0.0",
+		"framer-motion": "^4.1.17",
+		"next": "latest",
+		"next-seo": "^5.1.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.2.0"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"eslint": "8.8.0",
+		"eslint-config-next": "12.0.10"
+	}
 }
