--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@chakra-ui/icons": "^1.0.0",
-		"@chakra-ui/react": "^1.4.2",
-		"@emotion/react": "^11.0.0",
-		"@emotion/styled": "^11.0.0",
-		"framer-motion": "^4.1.17",
-		"next": "latest",
-		"next-seo": "^5.1.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-icons": "^4.2.0"
+		"@chakra-ui/icons": "^2.0.11",
+		"@chakra-ui/react": "^2.3.7",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"framer-motion": "^7.6.4",
+		"next": "^13.0.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.6.0"
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@types/node": "^18.11.9",
+		"@types/react": "^18.0.25",
 		"eslint": "8.8.0",
 		"eslint-config-next": "12.0.10"
 	}
